Improvements and bug fixes

--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -4,6 +4,4 @@ $gray-lighter: #dbe3e8
 $font-size-base: .875rem
 $font-size-xs: .75rem
 
-$primary: #F25F43
-$link: $primary
-$dark: #0B1A33
+$primary: #f25f43
