--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -3,10 +3,12 @@
 @import "./components/feed"
 @import "./components/avatar"
 @import "./components/notifications"
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700&subset=vietnamese')
 
 #wrapper
     padding: 0
     min-width: 480px
+    font-family: "Roboto", sans-serif
 
 .content-wrapper
     padding: 10px
@@ -17,8 +19,23 @@
 .mb-1
     margin-bottom: 1rem !important
 
+.pt-0
+    padding-top: 0 !important
+
+.pb-0
+    padding-bottom: 0 !important
+
+.mt-05
+    margin-top: .5rem !important
+
 .color-primary
     color: $primary !important
 
 .color-white
     color: #FFF !important
+
+.small-text
+    font-size: $font-size-base !important
+
+.fw-bold
+    font-weight: bold !important
