--- a/src/sass/components/_feed.sass
+++ b/src/sass/components/_feed.sass
@@ -1,4 +1,12 @@
 .feed-wrapper
     padding: 0
     overflow-y: auto
-    max-height: 25rem
+    max-height: 315px
+
+    .media
+        display: flex
+        align-items: center
+        justify-content: space-between
+
+    .card-content
+        padding: .5em 0
