--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -28,8 +28,15 @@
 .mt-05
     margin-top: .5rem !important
 
+.mb-05
+    margin-bottom: .5rem !important
+
 .color-primary
     color: $primary !important
+
+    &.hoverable
+        &:hover
+            color: darken($primary, 20) !important
 
 .color-white
     color: #FFF !important
@@ -39,3 +46,7 @@
 
 .fw-bold
     font-weight: bold !important
+
+a
+    &:hover
+        color: darken($primary, 20)
