--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -1,4 +1,4 @@
-@import "variables"
+@import "./variables"
 @import "node_modules/bulma/bulma"
 @import "./components/feed"
 @import "./components/avatar"
