--- a/src/popup/scss/app.scss
+++ b/src/popup/scss/app.scss
@@ -26,6 +26,10 @@ body {
     justify-content: space-between;
 }
 
+.infinite-status-prompt {
+    display: none !important
+}
+
 h1, h2, h3 {
     margin-bottom: .5rem;
 }
